feat: implement permanent Supabase proxy solution and improve error handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/api/supabase/:path*",
+            "destination": "https://kfpwjhupiqgulywuwoer.supabase.co/:path*"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
