--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
+    "dev:proxy": "vercel dev",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
