--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
             "destination": "https://kfpwjhupiqgulywuwoer.supabase.co/:path*"
         },
         {
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
