--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "dev:proxy": "vercel dev",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
@@ -84,7 +83,8 @@
     "tailwindcss": "4.1.12",
     "typescript": "^5.9.3",
     "vite": "6.3.5",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "@vercel/node": "^3.0.0"
   },
   "peerDependencies": {
     "react": "^18.3.1",
