--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "destination": "https://kfpwjhupiqgulywuwoer.supabase.co/:path*"
         },
         {
-            "source": "/(.*)",
+            "source": "/((?!api/).*)",
             "destination": "/index.html"
         }
     ]
