--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "vaul": "1.1.2"
+    "vaul": "1.1.2",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
@@ -83,8 +84,7 @@
     "tailwindcss": "4.1.12",
     "typescript": "^5.9.3",
     "vite": "6.3.5",
-    "vitest": "^4.0.18",
-    "@vercel/node": "^3.0.0"
+    "vitest": "^4.0.18"
   },
   "peerDependencies": {
     "react": "^18.3.1",
