feat: light/dark mode fixes across Teams & Explore, role picker in Settings, Google avatar sync, Supabase error handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "/api/supabase/:path*",
-            "destination": "https://kfpwjhupiqgulywuwoer.supabase.co/:path*"
-        },
-        {
-            "source": "/((?!api/).*)",
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
