--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "build": "vite build",
     "dev": "vite",
@@ -71,8 +68,7 @@
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "tw-animate-css": "1.3.8",
-    "vaul": "1.1.2",
-    "@vercel/node": "^3.0.0"
+    "vaul": "1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
