--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "tailwindcss": "4.1.12",
     "typescript": "^5.9.3",
     "vite": "6.3.5",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.18"
   },
   "peerDependencies": {
